--- a/PsuTimetable/PsuTimetable.Android/Resources/layout/Toolbar.axml
+++ b/PsuTimetable/PsuTimetable.Android/Resources/layout/Toolbar.axml
@@ -1,9 +1,19 @@
 <android.support.v7.widget.Toolbar
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/toolbar"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="?attr/colorPrimary"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/toolbar"
+	android:layout_width="match_parent"
+	android:layout_height="wrap_content"
+	android:background="?attr/colorPrimary"
+	android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+	android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
+	<TextView
+		android:id="@+id/tb_collected_by"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		android:text="PSU Timetable"
+		android:textColor="@color/colorBlack"
+		android:textSize="16sp"/>
+
+</android.support.v7.widget.Toolbar>
