--- a/PsuTimetable/PsuTimetable.Android/Resources/layout/Tabbar.axml
+++ b/PsuTimetable/PsuTimetable.Android/Resources/layout/Tabbar.axml
@@ -5,9 +5,11 @@
     android:id="@+id/sliding_tabs"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/colorPrimary"
+    android:background="@color/colorPrimary"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     app:tabIndicatorColor="@color/colorAccent"
-    app:tabGravity="fill"
+    app:tabGravity="center"
     app:tabMode="scrollable"
-	android:elevation="4dp"/>
+	android:elevation="4dp"
+	app:tabTextAppearance="@style/MineCustomTabText">
+</android.support.design.widget.TabLayout>
