--- a/PsuTimetable/PsuTimetable.Android/Resources/layout/Toolbar.axml
+++ b/PsuTimetable/PsuTimetable.Android/Resources/layout/Toolbar.axml
@@ -5,15 +5,24 @@
 	android:layout_height="wrap_content"
 	android:background="?attr/colorPrimary"
 	android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-	android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+	android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+	layout_scrollFlags="scroll|enterAlways">
 
 	<TextView
-		android:id="@+id/tb_collected_by"
+		android:id="@+id/toolbar_title"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
 		android:text="PSU Timetable"
 		android:textColor="@color/colorBlack"
 		android:textSize="16sp"/>
+
+	<ImageButton
+		android:id="@+id/toolbar_accountImageButton"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="start"
+		android:src="@drawable/round_account_circle_24"
+		android:backgroundTint="@color/colorPrimary"/>
 
 </android.support.v7.widget.Toolbar>
